# NOTES

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_24_0835-c5377d264341_database_create.py
api/: crud.py  dependencies.py  views.py
api/models/: __init__.py  access_token.py  notes.py  users.py
api/routers/: __init__.py  notes.py  users.py
api/schemas/: notes.py  users.py
core/: __init__.py  db_helper.py  settings.py  users_backend.py
notes/api/: __init__.py  db.py
notes/core/: __init__.py
