[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Derzhak31 <derzhak31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.9.1"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
